# om26630fdk-playground

./: .gitignore  readme.md
ccc/: CMakeLists.txt
ccc/src/: CMakeLists.txt  app.cpp  app.h  clrc663-defs.h  main.cpp  serial-port-conn.cpp  serial-port-conn.h
ccc/src/controllers/: load-protocol-dialog.cpp  load-protocol-dialog.h  main-window.cpp  main-window.h
ccc/src/views/: load-protocol-dialog.cpp  load-protocol-dialog.h  main-window.cpp  main-window.h
fw/: .clangd  CMakeLists.txt
fw/cmake/: arm-none-eabi-gcc.cmake
fw/doc/: clrc663-cfg.md
fw/src/: CMakeLists.txt  main.c  task-ccc.c  util.h
fw/src/board/: board-clk.c  board-clk.h  board.c  board.h  clk.c
fw/src/board/ccc/: ccc.h  gpio.c  usb.c  usb.h
fw/src/board/nfc/: clrc663-spi-impl.c  gpio.c  gpio.h  nfc.c  nfc.h  spi.c  spi.h
fw/src/drivers/clrc663/: clrc663-cmd.c  clrc663-spi.c
fw/src/hal/: hal-gpio.c  hal-gpio.h  hal-nvic.h  hal-pincm.c  hal-pincm.h  hal-spi.c  hal-spi.h  hal-startup.c  hal-sysctl.c  hal-sysctl.h  hal-util.h  startup.c  sysctl.c  sysctl.h
